# selenium_datatable

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml  workflow.yml
items_list/: __init__.py  container.py  item.py
selenium_datatable/: __init__.py  container.py  datatable.py  rowitem.py  table_container.py
tests/: conftest.py  index.html  page_object.py  test_items_list.py  test_selenium_datatable.py  test_selenium_datatable_2.py  test_travis.py
tests/fixtures/: driver.py
tests/mock_http_server/: __init__.py
tests/mock_http_server/templates/: index.html
