[metadata]
name = selenium-datatable
author = Lukasz Fundakowski
author_email = fundakol@yahoo.com
description = A small library for simplifying a table object in selenium
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fundakol/selenium_datatable
python_requires = >=3.6
keywords = selenium table data-table testing
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = selenium

[options.packages.find]
include = selenium_datatable
exclude =
    tests.*
