[metadata]
name = selenium-datatable
author = Lukasz Fundakowski
author_email = fundakol@yahoo.com
description = A small library for simplifying a table object in selenium
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fundakol/selenium_datatable
python_requires = >=3.6
keywords = selenium table data-table testing
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = selenium

[options.packages.find]
include = selenium_datatable
exclude =
    tests.*

[flake8]
max-line-length = 120
ignore =
    # line break before binary operator
    W503,
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[isort]
profile = black
src_paths = src,tests
filter_files = True
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = True
line_length = 88
